APP WORKING. Made changes locally using Ubuntu and very fast/good

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,17 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>About GameExchange.ca</h1>
+    <p>Are you tired of paying almost $100 for a new video game, playing it for a month or two, then trading it in for $20 at your local video game store?
+    GameExchange.ca alleviates that by allowing users to set up trades with other gamers who live near you.
+
+    <br /><br /><u>Setting up a trade is a simple three-step process:</u>
+    <ol>
+        <li>Click the "Propose New Trade" tab</li>
+        <li>Enter the title and platform of the game you own and want to trade</li>
+        <li>Enter the title and platform of the game you want to receive in exchange for the game you own</li>
+    </ol>
+    Once you submit your proposed trade, GameExchange.ca will look for a proposed trade by another gamer who wants the game you own, and owns the game you want.
+    If there is a match for your proposed trade, it will show up in the "Your Matches" tab. If you signed up for notifications, you will also receive an email
+    within minutes that a match has been found so you can get in contact with the other gamer right away.
+    </p>
 {% endblock content %}
