--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1>About GameExchange.ca</h1>
     <p>Are you tired of paying almost $100 for a new video game, playing it for a month or two, then trading it in for $20 at your local video game store?
-    GameExchange.ca alleviates that by allowing users to set up trades with other gamers who live near you.
+    GameExchange.ca alleviates that by allowing users to set up trades with other gamers who live nearby.
 
     <br /><br /><u>Setting up a trade is a simple three-step process:</u>
     <ol>
