Everything working, done the Databases tutorial. First commit that includes a file from the migration folder

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -1,3 +1,12 @@
+/* Toms overwrites */
+/*
+.nav-item {
+    margin-left: 1%;
+}
+*/
+/* End Toms overwrites */
+
+
 body {
   background: #fafafa;
   color: #333333;
