--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,6 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>About GameExchange.ca</h1>
+    <h1>About Game Exchange</h1>
     <p>Are you tired of paying almost $100 for a new video game, playing it for a month or two, then trading it in for $20 at your local video game store?
     GameExchange.ca alleviates that by allowing users to set up trades with other gamers who live nearby.
 
