--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,7 +30,7 @@
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">FAQ</a>
-              <a class="nav-item nav-link" href="{% url 'blog-about' %}">Search Proprosed Trades</a>
+              <a class="nav-item nav-link" href="{% url 'blog-about' %}">Search Proposed Trades</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
