--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,10 +1,26 @@
 {% extends "blog/base.html" %}
 {% block content %}
 <h1>Welcome to Game Exchange!</h1>
-<br /> <br />
+<br />
 <h4>What is Game Exchange?</h4>
 <p>Game exchange automatically sets up a trade for you with nearby gamers who own the game you want, and want the game you own.</p>
 <br />
+
+<img src="/media/meme.jpg" width="80%">
+<br /> <br />
+
+<h4>How does it work?</h4>
+    <u>Once you're registered, setting up a trade is a simple three-step process:</u>
+    <ol>
+        <li>Click the "Propose New Trade" tab</li>
+        <li>Enter the title and platform of the game you own and want to trade</li>
+        <li>Enter the title of the game you want to receive in exchange for the game you own</li>
+    </ol>
+    Once you submit your proposed trade, Game Exchange will look for a proposed trade by another gamer who wants the game you own, and owns the game you want.
+    If there is a match for your proposed trade, it will show up in the "Your Matches" tab. If you signed up for notifications, you will also receive an email
+    within minutes that a match has been found so you can get in contact with the other gamer right away.
+</p>
+
 <span>
     <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign In</button>
     <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign Up</button>
