update admin w/ other objects. Working on Matches query

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -11,7 +11,7 @@
         <li>Enter the title and platform of the game you want to receive in exchange for the game you own</li>
     </ol>
     Once you submit your proposed trade, GameExchange.ca will look for a proposed trade by another gamer who wants the game you own, and owns the game you want.
-    If there is a match for your proposed trade, it will show up in the "Your Matches" tab. If you signed up for notifications, you will also receive an email
+    If there is a match for your proposed trade, it will show up in the "Matches" tab. If you signed up for notifications, you will also receive an email
     within minutes that a match has been found so you can get in contact with the other gamer right away.
     </p>
 {% endblock content %}
