--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -4,6 +4,9 @@
     margin-left: 1%;
 }
 */
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 19px !important;
+}
 /* End Toms overwrites */
 
 
