--- a/blog/templates/blog/matches.html
+++ b/blog/templates/blog/matches.html
@@ -12,9 +12,11 @@
                 <small style="padding-right: 10px" class="text-muted"><b>Created By:</b> {{ trade.user_who_posted.username }}</small>
                 <small class="text-muted"><b>Created:</b> {{ trade.created_date|date:"M j, Y - gA" }} UTC</small>
             </div>
-            <span class="article-content"><a href="{% url 'blog-home' }">{{ trade.user_who_posted.username }}</a> wants to trade their copy of <b>{{ trade.owned_game.name }}</b> for your copy of <b>{{ trade.desired_game.name }}</b></span>
-            <p class="article-content">Platform: {{ trade.owned_game.platform }}</p>
-             <button style="padding: 5px 15px 5px 15px" class="btn btn-outline-info">Set up a trade</button>
+              <span class="article-content"><a href="{% url 'blog-home' }">{{ trade.t2username }}</a> wants to trade their copy of </span>
+              <span><b>{{ trade.desired_game.name }}</b>({{ trade.desired_game.platform }}) for your copy of </span>
+              <span><b>{{ trade.owned_game.name }}</b>({{ trade.owned_game.platform }})</span> <br />
+<!--            <p class="article-content">Platform: {{ trade.owned_game.platform }}</p>-->
+             <button style="padding: 5px 15px 5px 15px; margin-top: 10px" class="btn btn-outline-info">Set up a trade</button>
           </div>
         </article>
     {% endfor %}
