--- a/blog/templates/blog/trade_form.html
+++ b/blog/templates/blog/trade_form.html
@@ -4,10 +4,12 @@
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
-            <fieldset class="form-group">
+            <div class="form-group">
                 <legend class="border-bottom mb-4">Propose New Trade</legend>
                 {{ form|crispy }}
-            </fieldset>
+
+                {{ form.media }}
+            </div>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Submit</button>
             </div>
