--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,9 +54,9 @@
         <div class="col-md-8">
           {% if messages %}
             {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                {{ message }}
-              </div>
+<!--              <div class="alert alert-{{ message.tags }}">-->
+<!--                {{ message }}-->
+<!--              </div>-->
             {% endfor %}
           {% endif %}
           {% block content %}{% endblock %}
