Added data script from csv

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -22,7 +22,7 @@
 </p>
 
 <span>
-    <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign In</button>
+    <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Log In</button>
     <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign Up</button>
 </span>
 <br /> <br /> <br />
