--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -41,8 +41,8 @@
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Account</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
-                <a class="nav-item nav-link" href="{% url 'login' %}"><b>Login</b></a>
-                <a class="nav-item nav-link" href="{% url 'register' %}"><b>Register</b></a>
+                <a class="nav-item nav-link" href="{% url 'login' %}"><b>Log In</b></a>
+                <a class="nav-item nav-link" href="{% url 'register' %}"><b>Sign Up</b></a>
               {% endif %}
             </div>
           </div>
