--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -35,8 +36,9 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'blog-matches' %}">Active Trades</a>
+                <a class="nav-item nav-link " href="{% url 'blog-matches' %}">Active Trades</a>
                 <a class="nav-item nav-link" href="{% url 'blog-matches' %}">Matches</a>
+                <a class="nav-item nav-link" href="{% url 'trade-create' %}">Submitted Trades</a>
                 <a class="nav-item nav-link" href="{% url 'trade-create' %}">Propose New Trade</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Account</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
