--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,9 +36,9 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link " href="{% url 'blog-matches' %}">Active Trades</a>
-                <a class="nav-item nav-link" href="{% url 'blog-matches' %}">Matches</a>
-                <a class="nav-item nav-link" href="{% url 'trade-create' %}">Submitted Trades</a>
+                <a class="nav-item nav-link " href="{% url 'blog-matches' %}">Confirmed Trades</a>
+                <a class="nav-item nav-link" href="{% url 'blog-matches' %}">Your Matches</a>
+                <a class="nav-item nav-link" href="{% url 'blog-trades' %}">Your Trades</a>
                 <a class="nav-item nav-link" href="{% url 'trade-create' %}">Propose New Trade</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Account</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
@@ -65,11 +65,15 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h5>Hi, {username}!</h5>
-            <p class='text-muted'>Your membership type: <b>Premium</b> <br />
-                <a href="#"><u>Click here</u></a> for membership type information
+              {% if user.id != Null %}
+                <h5>Hi, {{user}}!</h5>
+                - Your membership type: <b>Premium</b><br />
+                - <a href="#"><u>Membership type information</u></a> <br />
+              {% endif %}
+              <br />
+              <b>Safari</b> browser is not fully supported
+              <br /> <br />
               <ul class="list-group">
-<!--                <li class="list-group-item list-group-item-light">Latest Trade Requests</li>-->
                 <li class="list-group-item list-group-item-light">Announcements</li>
                 <li class="list-group-item list-group-item-light">Support</li>
                 <li class="list-group-item list-group-item-light">Report User</li>
