--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -3,17 +3,26 @@
 <h1>Welcome to Game Exchange!</h1>
 <br />
 <h4>What is Game Exchange?</h4>
-<p>Game exchange automatically sets up a trade for you with nearby gamers who own the game you want, and want the game you own.</p>
+<p>Game exchange automatically sets up a trade for you with nearby gamers who own the game you want, and want the game you own.
+   Stop getting ripped off by low trade-in values and get new games for the ones you don't play anymore!</p>
 <br />
 
 <img src="/media/meme2.jpg" width="80%">
 <br /> <br />
 
+{% if not user.is_authenticated %}
+<span>
+    <button onclick="document.location='/login'" style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Log In</button>
+    <button onclick="document.location='/register'" style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign Up</button>
+</span>
+<br /> <br />
+{% endif %}
+
 <h4>How does it work?</h4>
     <u>Once you're registered, setting up a trade is a simple three-step process:</u>
     <ol>
         <li>Click the "Propose New Trade" tab</li>
-        <li>Enter the title and platform of the game you own and want to trade</li>
+        <li>Enter the title of the game you own and want to trade</li>
         <li>Enter the title of the game you want to receive in exchange for the game you own</li>
     </ol>
     Once you submit your proposed trade, Game Exchange will look for a proposed trade by another gamer who wants the game you own, and owns the game you want.
@@ -21,9 +30,5 @@
     within minutes that a match has been found so you can get in contact with the other gamer right away.
 </p>
 
-<span>
-    <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Log In</button>
-    <button style="margin-left: 20%; padding: 10px 30px 10px 30px" class="btn btn-outline-info">Sign Up</button>
-</span>
 <br /> <br /> <br />
 {% endblock content %}
