--- a/blog/templates/blog/your-trades.html
+++ b/blog/templates/blog/your-trades.html
@@ -1,28 +1,35 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
-<h1>Your Matches</h1>
+<h1>Your Trades</h1>
 <br />
 
-<h5>These proposed trades by other users match the trades you submitted</h5>
+<h5>These are the trades you have proposed to other users</h5>
 <br />
+{% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+              </div>
+            {% endfor %}
+{% endif %}
+
     {% for trade in trades %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-                <small style="padding-right: 10px" class="text-muted"><b>Created By:</b> {{ trade.t2_username }}</small>
-                <small class="text-muted"><b>Created:</b> {{ trade.t2_created_date|date:"M j, Y g:iA" }} PT</small>
+                <small class="text-muted"><b>Created:</b> {{ trade.created_date|date:"M j, Y g:iA" }} PT</small>
+                <small class="text-muted"><b>id:</b> {{ trade.id }}</small>
             </div>
-              <span class="article-content"><a href="{% url 'blog-home' }">{{ trade.t2_username }}</a> wants to trade their copy of </span>
-              <span><b>{{ trade.desired_game.name }}</b>({{ trade.desired_game.platform }}) for your copy of </span>
-              <span><b>{{ trade.owned_game.name }}</b>({{ trade.owned_game.platform }})</span> <br />
-             <button style="padding: 5px 15px 5px 15px; margin-top: 10px" data-toggle="modal"
-                     data-target="#confirmTradeModal-{{trade.id}}" class="btn btn-outline-info">Confirm trade
-             </button>
+              <span class="article-content">You want to trade your copy of </span>
+              <span><b>{{ trade.owned_game.name }}</b>({{ trade.owned_game.platform }}) </span>
+              <span>for someone else's copy of <b>{{ trade.desired_game.name }}</b>({{ trade.desired_game.platform }})</span> <br />
+             <button style="padding: 5px 15px 5px 15px; margin-top: 10px" data-toggle="modal" data-target="#deleteTradeModal-{{trade.id}}" class="btn btn-outline-danger">Delete trade</button>
           </div>
         </article>
 
         <!-- Modal -->
-        <div class="modal fade" id="confirmTradeModal-{{trade.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="deleteTradeModal-{{trade.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div style="max-width: 45%" class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -40,7 +47,6 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                 <input type="hidden" value="{{ trade.id }}" name="trade_id">
-                <input type="hidden" value="{{ trade.id }}" name="user1_id">
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <button type="submit" class="btn btn-danger">Delete trade</button>
@@ -50,6 +56,7 @@
           </div>
         </div>
     {% endfor %}
+
 
     {% if is_paginated %}
 
