--- a/blog/templates/blog/matches.html
+++ b/blog/templates/blog/matches.html
@@ -26,23 +26,25 @@
           <div style="max-width: 45%" class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Delete this trade?</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Confirm trade</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
+                  <p><b>You are committing to {{ trade.t2_username }} to follow through with this trade.</b></p>
                   <p>This trade is:</p>
                 <span>- Your copy of: <b>{{ trade.owned_game.name }}</b>({{ trade.owned_game.platform }})<br /></span>
-                <span>- For someone else's copy of: <b>{{ trade.desired_game.name }}</b>({{ trade.desired_game.platform }})</span> <br />
+                <span>- For {{ trade.t2_username }}'s copy of: <b>{{ trade.desired_game.name }}</b>({{ trade.desired_game.platform }})</span> <br /> <br />
+                <p style="margin-left: 1%"><i class="fa fa-info-circle" aria-hidden="true"></i> You will have 3 trade confirmations available after confirming this trade.</p>
               </div>
-            <form action="{% url 'trade-delete' %}" method="post">
+            <form action="{% url 'trade-confirm' %}" method="post">
                 {% csrf_token %}
-                <input type="hidden" value="{{ trade.id }}" name="trade_id">
-                <input type="hidden" value="{{ trade.id }}" name="user1_id">
+                <input type="hidden" value="{{ trade.id }}" name="trade_1_id">
+                <input type="hidden" value="{{ trade.t2_id }}" name="trade_2_id">
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-danger">Delete trade</button>
+                <button type="submit" class="btn btn-primary">Confirm trade</button>
               </div>
             </form>
             </div>
