--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,9 +1,9 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<h1>Welcome to Game Exchange!</h1>
+<h1>Welcome to Video Game Exchange!</h1>
 <br />
-<h4>What is Game Exchange?</h4>
-<p>Game exchange automatically sets up a trade for you with nearby gamers who own the game you want, and want the game you own.
+<h4>What is Video Game Exchange?</h4>
+<p>Video Game Exchange automatically sets up a trade for you with nearby gamers who own the game you want, and want the game you own.
    Stop getting ripped off by low trade-in values and get new games for the ones you don't play anymore!</p>
 <br />
 
@@ -22,12 +22,12 @@
     <u>Once you're registered, setting up a trade is a simple three-step process:</u>
     <ol>
         <li>Click the "Propose New Trade" tab</li>
-        <li>Enter the title of the game you own and want to trade</li>
+        <li>Enter the title of the game you own and want to trade away</li>
         <li>Enter the title of the game you want to receive in exchange for the game you own</li>
     </ol>
-    Once you submit your proposed trade, Game Exchange will look for a proposed trade by another gamer who wants the game you own, and owns the game you want.
+    Once you submit your proposed trade, Video Game Exchange will look for a proposed trade by another user who wants the game you own, and owns the game you want.
     If there is a match, it will show up on the "Matches" page. If you <a href="#">signed up for notifications</a>, you will also receive an email
-    within minutes that a match has been found so you can get in contact with the other gamer right away.
+    within minutes that a match has been found so you can get in contact with the other user right away.
 </p>
 
 <br /> <br /> <br />
