--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -15,32 +16,33 @@
 </head>
 
 <body>
-    <div class="messages">
-        <ul id="chat-log">
-
-        </ul>
-
-        <div class="message-input">
-            <div class="wrap">
-                <input id="chat-message-input" type="text" placeholder="Write your message..." />
-                <button id="chat-message-submit" class="submit">
-                <i class="fa fa-paper-plane" aria-hidden="true"></i>
-                </button>
+        <div class="messages">
+            <ul id="chat-log">
+            </ul>
+            <div class="message-input">
+                <div class="wrap">
+                    <input id="chat-message-input" type="text" placeholder="Write your message..." />
+                    <button id="chat-message-submit" class="submit">
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                    </button>
+                </div>
             </div>
         </div>
-    </div>
 
 
-<script src="{% static '/reconnecting_websockets.js' %}"></script>
+<script src="{% static 'reconnecting_websockets.js' %}"></script>
 <script>
     var roomName = {{ room_name_json }};
     var username = {{ user }};
 
+    //only initialize var if status = 'open' and current user = user1, user2 or admin
     var chatSocket = new ReconnectingWebSocket(
         'ws://' + window.location.host +
         '/ws/chat/' + roomName + '/');
 
+    //only call if status = 'open' and current user = user1, user2 or admin (may be taken care of by above)
     chatSocket.onopen = function(e) {
+      console.log('~~~chatSocket.onopen~~~');
       fetchMessages();
     }
 
@@ -78,6 +80,7 @@
     };
 
     function fetchMessages() {
+        console.log('~~~fetchMessages()~~~');
       chatSocket.send(JSON.stringify({'command': 'fetch_messages' }));
     }
 
