--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,7 +5,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Sign Up to Game Exchange</legend>
+                <legend class="border-bottom mb-4">Sign Up to Video Game Exchange</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
